@@ -1,5 +1,7 @@
 === Edge
 
+* Fix escaped <code> tag when it has the class attribute and is in a <pre> tag. #95
+
 * Fix dimensions and primes for LaTeX. #103
 
 * Don't allow square brackets inside lang attribute so double square brackets are interpreted like Textile 2 and RedCloth 3. #101
